GNOME Bugzilla – Bug 609029
gnome-screensaver should be a D-Bus service
Last modified: 2010-06-21 21:00:10 UTC
Created attachment 153044 [details] [review] patch to setup gnome-screensaver as a D-Bus service Since the gnome-screensaver daemon needs to be running for screen locking to work reliably, it should be a D-Bus service. This would ensure it gets respawned when it crashes.
Created attachment 153099 [details] [review] Proper git format patch. Here's the same patch in git format.
Fixed in a slightly different way. Thanks for the report.