Don't check if screensaver service is running

Now that the screensaver is an activated service it doesn't
make sense to check if it is running before use.
https://bugzilla.gnome.org/show_bug.cgi?id=609029